--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<section>
 					<section>
 						<h2>Columbus arrives at the West Indies, 1492</h2>
-							
+							Columbus mistook the land for India. He renamed the land as the West Indies.
 					</section>
 					<section>
 						<img width="1000" height="500" data-src="http://www.aoc.gov/sites/default/files/styles/artwork-node/public/images/artwork/6237383173_e5ca34098d_b.jpg?itok=k3Z6ckuL">
