--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
 							The enslavement of primarily Africans that were imported for the sake of free labor. They justified this through the concept of a racial hierarchy stemmed from the White Supremacy power structures.
 					</section>
 					<section>
-						<img width="1000" height="500" data-src="https://blogs.stockton.edu/plantations/files/2013/11/cottonculture-1875.jpg">
-						<br>
+						<a href="#/12">
+							<img width="1000" height="500" data-src="https://blogs.stockton.edu/plantations/files/2013/11/cottonculture-1875.jpg">
+						</a>
 					</section>
 					<section>
 						<iframe width="960" height="700" src="https://www.youtube.com/embed/L4tl8dZQobw" frameborder="0" allowfullscreen></iframe>
